Bug 1474284 - cope with degenerate bezier curves r=baz a=ritu